// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> error renders 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Off"
    aria-labelledby="input-1-label input-1-error"
    id="input-1"
    role="switch"
    type="button"
  />
  <label
    for="input-1"
    id="input-1-label"
  >
    Label
  </label>
  <span
    id="input-1-error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<Switch /> help renders 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Off"
    aria-labelledby="input-1-label"
    id="input-1"
    role="switch"
    type="button"
  />
  <label
    for="input-1"
    id="input-1-label"
  >
    Label
    <span>
      Help
    </span>
  </label>
</div>
`;

exports[`<Switch /> label renders 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Off"
    aria-labelledby="input-1-label"
    id="input-1"
    role="switch"
    type="button"
  />
  <label
    for="input-1"
    id="input-1-label"
  >
    Label
  </label>
</div>
`;

exports[`<Switch /> renders 1`] = `
<div>
  <button
    aria-checked="false"
    aria-label="Off"
    id="input-1"
    role="switch"
    type="button"
  />
</div>
`;
